stuck on layout issue with flexbox

--- a/css/style.css
+++ b/css/style.css
@@ -18,20 +18,18 @@ body {
   width: 100vw;
   height: 100vh;
   display: flex;
+  flex-direction: row;
+  align-items: center;
   justify-content: center;
 }
 
 .wrapper {
-  margin-top: 10%;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
 }
 
 .name-tag {
-  height: 200px;
-  width: 250px;
-  padding-left: 5px;
-  padding-top: 5px;
+  height: 100%;
 }
 
 .name-tag-top {
@@ -91,6 +89,7 @@ body {
   display: flex;
   margin-top: 1em;
   justify-content: space-between;
+  align-self: flex-end;
 }
 
 .link-list-item {
